--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -54,7 +54,7 @@ The Pyramids = Pyramidy
 Worker construction increased 25% = Rychlost dělníka se zvýšila o 25% 
 Provides 2 free workers = Poskytuje 2 dělníky zdarma
 
-Barracks = Kasárny
+Barracks = Kasárna
 Krepost = Krepost
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = Zlato a kulturní body na nákup nového území ve městě se snížily o 25%
 
@@ -136,11 +136,11 @@ Enemy land units must spend 1 extra movement point when inside your territory (o
 
 Workshop = Dílna
 Longhouse = Dlouhý dům
-+1 Production from each worked Forest tile = +1 produkce pro každého dělníka na políčku s lesem
++1 Production from each worked Forest tile = +1 Produkce za každého dělníka na políčku s lesem
 
 Forge = Kovárna
  # Requires translation!
-+15% production of land units = 
++15% production of land units = +15% produkce pozemních jednotek
 
 Harbor = Přístav
 +1 production from all sea resources worked by the city = +1 produkce ze všech mořských zdrojů využívaných městem
@@ -585,7 +585,7 @@ Isabella =
 Uniques = Unikátní dovednosti
 Promotions = Povýšení
 Barbarians = Barbaři
-Load copied data = Načíst zkopírované data
+Load copied data = Načíst zkopírovaná data
 Could not load game from clipboard! = Nepodařilo se nahrát hru ze schránky!
 Start game! = Začít hru!
 Map options = Nastavení mapy
@@ -687,7 +687,7 @@ Upload map = Nahrát mapu
 Could not upload map! = Nelze nahrát mapu!
 Map uploaded successfully! = Mapa úspěšně nahrána!
  # Requires translation!
-Saving... = 
+Saving... = Ukládám...
 
 # Options
 
@@ -709,7 +709,7 @@ Check for idle units = Kontrolovat zahálející jednotky
 Move units with a single tap = Pohyb jednotek na jeden klik
 Show tutorials = Zobrazit tutoriál
 Auto-assign city production = Automatické přiřazení produkce ve městě
-Auto-build roads = Automatická vystavba cest
+Auto-build roads = Automatická výstavba cest
 Show minimap = Zobrazit minimapu
 Show pixel units = Zobrazit jednotky jako pixely
 Show pixel improvements = Zobrazit vylepšení jako pixely
@@ -718,15 +718,15 @@ Fontset = Typ písma
 
 # Notifications
 
-Research of [technologyName] has completed! = Výzkum technologie [technologyName] byl dokončen
+Research of [technologyName] has completed! = Výzkum technologie [technologyName] byl dokončen!
 You have entered a golden age! = Započal Zlatý věk civilizace!
 [resourceName] revealed near [cityName] = [resourceName] objeven(a) poblíž [cityName]
-A [greatPerson] has been born in [cityName]! = [cityName] - Narodil se [greatPerson]
-We have encountered [civName]! = Setkali jsme se s [civName]
-Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Žold pro jednotku [unitName] nebyl zaplacen - jednotka byla rozpuštěna.
+A [greatPerson] has been born in [cityName]! = [cityName] - Narodil se [greatPerson]!
+We have encountered [civName]! = Setkali jsme se s [civName]!
+Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Žold pro jednotku [unitName] nebyl zaplacen - jednotka byla rozpuštěna!
 [cityName] has grown! = Město [cityName] se rozrostlo!
 [cityName] has been founded! = Město [cityName] bylo založeno!
-[cityName] is starving! = Ve městě [cityName] začal hladomor
+[cityName] is starving! = Ve městě [cityName] začal hladomor!
 [construction] has been built in [cityName] = [construction] - stavba dokončena ve městě [cityName]
 [wonder] has been built in a faraway land = Div světa [wonder] byl vybudován ve vzdálené zemi
 Work has started on [construction] = Začali jsme stavět - [construction]
@@ -902,7 +902,7 @@ Current points = Získané body
 Points per turn = Bodů za tah
 Convert production to gold at a rate of 4 to 1 = Konvertovat produkci na zlato v poměru 4 ku 1
 Convert production to science at a rate of 4 to 1 = Konvertovat produkci na výzkum v poměru 4 ku 1
-The city will not produce anything. = Město nebude nic vyrábět
+The city will not produce anything. = Město nebude nic vyrábět.
 
 # Technology UI
 
@@ -916,7 +916,7 @@ Wonder = Div
 National Wonder = Národní Div
 National Wonders = Národní Divy
 Wonders enabled = Odemknuté Divy
-Tile improvements enabled = Odemknuté vylepšení políček
+Tile improvements enabled = Odemknutá vylepšení políček
 Reveals [resource] on the map = Objeveno naleziště [resource] na mapě
 XP for new units = XP pro nové jednotky
 provide = poskytuje
@@ -1154,7 +1154,7 @@ Free Great Person of choice near capital = Obdržíte zdarma velkou osobnost dle
 Honor = Čest
 +25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = +25% bonus proti barbarům, za každého zabitého barbara obdržíte kulturní body
 Warrior Code = Kodex válečníka
-+20% production when training melee units = +20% produkce při výcviku jednotky pro buj zblízka
++20% production when training melee units = +20% produkce při výcviku jednotky pro boj zblízka
 Discipline = Disciplína
 +15% combat strength for melee units which have another military unit in an adjacent tile = +15% bojové síly pro jednotky pro boj zblízka, které mají vedle sebe další vojenskou jednotku
 Military Tradition = Vojenská tradice
@@ -1337,7 +1337,7 @@ Fertilizer = Hnojivo
 'The nation that destroys its soil destroys itself.' - Franklin Delano Roosevelt = 'Národ, který ničí svou půdu, ničí sám sebe.' - Franklin Delano Roosevelt
 Biology = Biologie
 'If the brain were so simple we could understand it, we would be so simple we couldn't.' - Lyall Watson = 'Kdyby byl mozek tak jednoduchý, že bychom mu rozuměli, byli bychom tak prostí, že bychom nemohli' - Lyall Watson
-Electricity = Elektrika
+Electricity = Elektřina
 'Is it a fact - or have I dreamt it - that, by means of electricity, the world of matter has become a great nerve, vibrating thousands of miles in a breathless point of time?' - Nathaniel Hawthorne = 'Je to skutečnost, nebo můj sen, že svět se stal díky elektřině obrovským nervem pulsujícím tisíce kilometrů během zlomku času.' - Nathaniel Hawthorne
 Steam Power = Parní stroj
 'The nations of the West hope that by means of steam communication all the world will become as one family.' - Townsend Harris = 'Západní národy doufají, že se prostřednictvím parní komunikace stane celý svět jednou velkoiu rodinou.' - Townsend Harris
@@ -1463,19 +1463,19 @@ Grants Rejuvenation (all healing effects doubled) to adjacent military land unit
 
 Cattle = Dobytek
 Sheep = Ovce
-Deer = Jelen
+Deer = Jeleni
 Bananas = Banány
 Wheat = Pšenice
 Stone = Kámen
-Fish = Ryba
+Fish = Ryby
 Bison = Bizon
-Horses = Bizon
+Horses = Koně
 Iron = Železná ruda
 Coal = Uhlí
 Oil = Ropa
 Aluminum = Hliník
-Uranium = Uranium
-Furs = Kožešina
+Uranium = Uran
+Furs = Kožešiny
 Cotton = Bavlna
 Dyes = Barvivo
 Gems = Drahokamy
@@ -1491,7 +1491,7 @@ Pearls = Perly
 Whales = Velryby
 Copper = Měď
 Cocoa = Kakao
-Crab = Krab
+Crab = Krabi
 Citrus = Citrusy
 Truffles = Lanýže
 Farm = Farma
@@ -1724,7 +1724,7 @@ Bombardment II = Bombardování II
 Bombardment III = Bombardování III
 Boarding Party I = Obsazení I
 Boarding Party II = Obsazení II
-Boarding Party III = Coastal Raider III
+Boarding Party III = Obsazení III
 Coastal Raider I = Pobřežní jezdec I
 Coastal Raider II = Pobřežní jezdec II
 Coastal Raider III = Pobřežní jezdec III
