Add specialist slot tooltip for buildings that provide them (#1776)
* Add specialist slot tooltip for buildings that provide them
 - #1762

* Remove duplicate translations

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1498,7 +1498,12 @@ Specialist Buildings =
  # Requires translation!
 Specialist Allocation = 
  # Requires translation!
-Specialists = 
+Specialists =
+[specialist] slots = [specialist] slots
+Engineer specialist = Engineer specialist
+Merchant specialist = Merchant specialist
+Scientist specialist = Scientist specialist
+Artist specialist = Artist specialist 
  # Requires translation!
 Food eaten = 
  # Requires translation!
