--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -821,7 +821,12 @@ Nothing =
 Annex city = 
 Specialist Buildings = 
 Specialist Allocation = 
-Specialists = 
+Specialists =
+[specialist] slots = 
+Engineer specialist = 
+Merchant specialist = 
+Scientist specialist = 
+Artist specialist = 
 Food eaten = 
 Growth bonus = 
 Unassigned population = 
