--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -119,8 +119,7 @@ Mint = Zecca
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Pochi racconti fantastici possono sorpassare quello della cittadella di granito sospesa in cima ai precipizi, Machu Picchu, la corona delle terre degli Inca.' - Hiram Bingham
 Gold from all trade routes +25% = +25% oro da ogni rotta commerciale
- # Requires translation!
-Must have an owned mountain within 2 tiles = 
+Must have an owned mountain within 2 tiles = La città deve rasentare una montagna entro due caselle
 
 Aqueduct = Acquedotto
 40% of food is carried over after a new citizen is born = Il 40% del cibo viene immagazzinato dopo la nascita di un nuovo cittadino
@@ -134,8 +133,7 @@ Longhouse = Casa Lunga
 +1 Production from each worked Forest tile = +1 Produzione da ogni casella di Foresta sfruttata dalla città
 
 Forge = Fucina
- # Requires translation!
-+15% production of land units = 
++15% production of land units = +15% produzione per le unità terrestri
 
 Harbor = Porto
 +1 production from all sea resources worked by the city = +1 Produzione per ogni risorsa marittima sfruttata
@@ -562,7 +560,7 @@ Scientific = Scientifica
 Domination = Dominazione
 Cultural = Culturale
 
-HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = IN FASE DI PRODUZIONE - TI ABBIAMO AVVERTITO!
+HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = IN FASE SPERIMENTALE - TI ABBIAMO AVVERTITO!
 Online Multiplayer = Multiplayer online
 
 World size = Dimensioni della mappa
@@ -635,8 +633,7 @@ Are you sure you want to delete this map? = Vuoi davvero cancellare questa mappa
 Upload map = Carica
 Could not upload map! = Impossibile caricare mappa!
 Map uploaded successfully! = Mappa caricata con successo
- # Requires translation!
-Saving... = 
+Saving... = Salvataggio...
 
 # Options
 
@@ -984,12 +981,9 @@ Version = Versione
 Resolution = Risoluzione
 Tileset = Set celle
 Map editor = Editor mappe
- # Requires translation!
-Create = 
- # Requires translation!
-New map = 
- # Requires translation!
-Empty = 
+Create = Crea
+New map = Nuova mappa
+Empty = Svuota
 Language = Lingua
 Terrains & Resources = Terreni e risorse
 Improvements = Miglioramenti
@@ -1313,7 +1307,7 @@ Who knows what the future holds? = Chi sa cosa riservano i prossimi anni?
 +10% science and production in all cities = +10% Scienza e Produzione in tutte le città
 Improves movement speed on roads = Migliora la velocità di movimento sulle strade
 Enables conversion of city production to science = Consente di convertire la Produzione nelle città in Scienza
-Enables Research agreements = Abilita Accordi di Ricerca
+Enables Research agreements = Consente di stabilire Accordi di Ricerca
 Enables conversion of city production to gold = Consente di convertire la Produzione nelle città in Oro
 Enables embarkation for land units = Permette alle unità terrestri di imbarcarsi e attraversare le caselle acquatiche.
 Enables embarked units to enter ocean tiles = Permette alle unità di imbarcarsi nelle caselle oceaniche
@@ -1496,6 +1490,7 @@ Logistics = Logistica
 Trebuchet = Trabocco
 Hwach'a = Hwach'a
 Limited Visibility = Visibilità limitata
+Keshik = Keshik
 Longswordsman = Guerriero con spada lunga
 Pikeman = Picchiere
 Landsknecht = Lanzichenecco
@@ -1583,6 +1578,7 @@ Can speed up construction of a wonder = Può accelerare la costruzione di una Me
 Can build improvement: Manufactory = Può costruire il miglioramento: Manifattura
 Great General = Grande Generale
 Bonus for units in 2 tile radius 15% = 15% Bonus per le unità nel raggio di 2 caselle
+Khan = Khan
 
 # Promotions
 
@@ -1671,22 +1667,14 @@ Reduces damage taken from interception by 50% = Dimezza i danni da intercettazio
 Bonus when intercepting [amount]% = [amount]% bonus d'intercettazione
 Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
- # Requires translation!
-Armor Plating I = 
- # Requires translation!
-Armor Plating II = 
- # Requires translation!
-Armor Plating III = 
- # Requires translation!
-+25% Combat Bonus when defending = 
- # Requires translation!
-Flight Deck I = 
- # Requires translation!
-Flight Deck II = 
- # Requires translation!
-Flight Deck III = 
- # Requires translation!
-Can carry 1 extra air unit = 
+Armor Plating I = Corazza I
+Armor Plating II = Corazza II
+Armor Plating III = Corazza III
++25% Combat Bonus when defending = +25% Forza in Difesa
+Flight Deck I = Ponte di volo I
+Flight Deck II = Ponte di volo II
+Flight Deck III = Ponte di volo III
+Can carry 1 extra air unit = Può trasportare un'unità aerea extra
 Can carry 2 aircraft = Trasporta due unità aeree
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa
