--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -133,8 +133,7 @@ Longhouse = Uzun Ev
 +1 Production from each worked Forest tile = Çalışılan her Ormandan +1 üretim
 
 Forge = Demirci Ocağı
- # Requires translation!
-+15% production of land units = 
++15% production of land units = kara birimi üretimine +15%
 
 Harbor = Liman
 +1 production from all sea resources worked by the city = Şehrin çalıştığı tüm deniz kaynaklarından +1 üretim
