--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -135,7 +135,7 @@ Longhouse = Długi dom
 
 Forge = Kuźnia
  # Requires translation!
-+15% production of land units = 
++15% production of land units = +15% do produkcji jednostek lądowych
 
 Harbor = Port
 +1 production from all sea resources worked by the city = +1 do produkcji za każdy wydobywany surowiec morski
@@ -1520,7 +1520,7 @@ Musketeer = Muszkieter
 Janissary = Janczar
 Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Leczy [amountHealed] obrażeń po zabiciu jednostki
-Minuteman = Minuteman
+Minuteman = Milicja
 Frigate = Fregata
 Ship of the Line = Okręt liniowy
 Lancer = Lansjer
