--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -274,7 +274,7 @@ Manhattan Project = Projekt Manhattan
 Enables nuclear weapon = Povolí atomovou zbraň
 
 Apollo Program = Program Apollo
-Enables construction of Spaceship parts = Zpřístupní kunstrukci části vesmírné lodi
+Enables construction of Spaceship parts = Zpřístupní konstrukci částí vesmírné lodi
 
 Nuclear Plant = Jaderná elektrárna
 
@@ -304,21 +304,21 @@ Requires [resource] = Vyžaduje surovinu [resource]
 Required tech: [requiredTech] = Vyžaduje technologii: [requiredTech]
 
  # Requires translation!
-Current construction = 
+Current construction = Současná produkce
  # Requires translation!
-Construction queue = 
+Construction queue = Fronta produkce
  # Requires translation!
-Pick a construction = 
+Pick a construction = Zvolit produkci
  # Requires translation!
-Queue empty = 
+Queue empty = Fronta je prázdná
  # Requires translation!
-Add to queue = 
+Add to queue = Přidat do fronty
  # Requires translation!
-Remove from queue = 
+Remove from queue = Odebrat z fronty
  # Requires translation!
-Show stats drilldown = 
+Show stats drilldown = Zobrazit statistiky
  # Requires translation!
-Show construction queue = 
+Show construction queue = Zobrazit produkci
 
 Diplomacy = Diplomacie
 War = Válka
@@ -330,30 +330,30 @@ Declare war on [civName]? = Vyhlásit válku civilizaci [civName]?
 You'll pay for this! = Za tohle zaplatite!
 Negotiate Peace = Mírové jednání
  # Requires translation!
-Peace with [civName]? = 
-Very well. = Jak je libo
-Farewell. = Sbohem
-Sounds good! = To zní dobře
-Not this time. = Z toho nic nebude
+Peace with [civName]? = Mír s civilizací [civName]?
+Very well. = Výborně.
+Farewell. = Sbohem.
+Sounds good! = To zní dobře!
+Not this time. = Z toho nic nebude.
 Excellent! = Skvěle!
 How about something else... = Co třeba zkusit něco jiného...
-A pleasure to meet you. = Rádi vás poznáváme
+A pleasure to meet you. = Rádi vás poznáváme.
 Our relationship:  = Náš vzájemný vztah: 
-We have encountered the City-State of [name]! = Poprvé jsme se setkali s městským státem [name]
+We have encountered the City-State of [name]! = Poprvé jsme se setkali s městským státem [name]!
 Declare Friendship ([numberOfTurns] turns) = Deklarace přátelství ([numberOfTurns] kol)
-May our nations forever remain united! = Nechť naše národy zůstanou navždy spojené
+May our nations forever remain united! = Nechť naše národy zůstanou navždy sjednoceny!
 Indeed! = Vskutku!
 Denounce ([numberOfTurns] turns) = Odsoudit ([numberOfTurns] kol)
-We will remember this. = To vám nikdy nezapomeneme!
+We will remember this. = To vám nikdy nezapomeneme.
 
  # Requires translation!
-[civName] has declared war on [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = Civilizace [civName] vyhlásila válku civilizaci [targetCivName]!
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
+[civName] and [targetCivName] have signed the Peace Treaty! = Civilizace [civName] and [targetCivName] podepsaly Mírovou Dohodu!
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = Civilizace [civName] and [targetCivName] podepsaly Deklaraci Přátelství!
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! =  Civilizace [civName] odsoudila civilizaci [targetCivName]!
 
 Unforgivable = Nenávist
 Enemy = Nepřátelství
@@ -370,20 +370,20 @@ Your warmongering ways are unacceptable to us. = Vaše chování je pro nás nep
 You have captured our cities! = Obsadili jste naše města!
 We applaud your liberation of our conquered cities! = Oslavujeme osvobození našich měst!
 Years of peace have strengthened our relations. = Roky míru posílily naše vzájemné vztahy.
-Our mutual military struggle brings us closer together. = Naše společné vélečné tažení nás sblížíli
+Our mutual military struggle brings us closer together. = Naše společné válečné tažení nás sblížilo.
 We have signed a public declaration of friendship = Podepsali jsme veřejnou deklaraci přátelství
 You have declared friendship with our enemies! = Deklarovali jste přátelství s našimi nepřáteli!
 You have declared friendship with our allies = Deklarovali jste přátelství s našimi spojenci
 Our open borders have brought us closer together. = Dohoda o otevřených hranicích nás sblížila.
-Your so-called 'friendship' is worth nothing. = Naše takzvané 'přátelství' pro vás nic neznamená.
+Your so-called 'friendship' is worth nothing. = Vaše takzvané 'přátelství' je bezcenné.
 You have publicly denounced us! = Veřejně jste nás odsoudili!
-You have denounced our allies = Osdoudili jsme naše spojence
-You have denounced our enemies = Odsoudili jsme naše nepřátele
+You have denounced our allies = Osdoudili jste naše spojence
+You have denounced our enemies = Odsoudili jste naše nepřátele
 You betrayed your promise to not settle cities near us = Porušili jste svůj slib nezakládat města u našich hranic
-You fulfilled your promise to stop settling cities near us! = Dodrželi jste svůj slib nezakládat města poblíž našich hranic.
+You fulfilled your promise to stop settling cities near us! = Dodrželi jste svůj slib nezakládat města poblíž našich hranic!
 You refused to stop settling cities near us = Odmítli jste žádost o nezakládání měst poblíž našich hranic
 Your arrogant demands are in bad taste = Vaše arogantní požadavky jsou dalším důkazem vaší zkaženosti
-Your use of nuclear weapons is disgusting! = Použití vašich atomových zbraní je nechutné!
+Your use of nuclear weapons is disgusting! = Vaše použití atomových zbraní je nechutné!
 
 Demands = Požadavky:
 Please don't settle new cities near us. = Prosím nezakládejte města poblíž našeho území.
@@ -570,15 +570,15 @@ Ramkhamhaeng = Ram Khamhaeng
 Food and Culture from Friendly City-States are increased by 50% = Jídlo a Kulturní body z spřátelených Městských států se zvednou o 50%.
 
 Songhai = Songhajská říše
-Askia = Askijská říše
+Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Získává trojnásobek zlata z Barbarských táborů a drancování měst. Jednotky při naloďování se můžou bránit.
 
  # Requires translation!
-Spain = 
+Spain = Španělsko
  # Requires translation!
-Isabella = 
+Isabella = Izabela
  # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Zlata za objev Přírodního Divu (500 Zlata jde-li o prvního objevitele). Kultura, Spokojenost a zisky z políček Přírodních Divů jsou dvojnásobné.
 
 # New game screen
 
@@ -627,9 +627,9 @@ Difficulty = Obtížnost
 Settler = Osadník
 Chieftain = Náčelník
 Warlord = Válečník
-Prince = Princ
+Prince = Kníže
 King = Král
-Emperor = Emperor
+Emperor = Císař
 Immortal = Polobůh
 Deity = Bůh
 
@@ -785,19 +785,19 @@ One of our trades with [nation] has been cut short = Jedna z našich obchodních
 We have allied with [nation]. = Uzavřeli jsme alianci s civilizací [nation].
 We have lost alliance with [nation]. = Ztratili jsme alianci s civilizací [nation].
  # Requires translation!
-We have discovered [naturalWonder]! = 
+We have discovered [naturalWonder]! = Objevili jsme [naturalWonder]!
  # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = Získali jsme [goldAmount] Zlata za objevení [naturalWonder]
  # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
+Your relationship with [cityStateName] is about to degrade = Vaše vztahy s [cityStateName] se zhoršují
  # Requires translation!
-Your relationship with [cityStateName] degraded = 
+Your relationship with [cityStateName] degraded = Vaše vztahy s [cityStateName] se zhoršily
  # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = Objeven nový tábor barbarů!
  # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+Received [goldAmount] Gold for capturing [cityName] = Získali jsme [goldAmount] Zlata při obsazení [cityName]
  # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Naše obchodní nabídka již není relevantni!
 
 # World Screen UI
 
@@ -860,7 +860,7 @@ Social policies = Sociální politika
 Community = Komunita
 Close = Zavřít
  # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Chcete ukončit hru?
 
 # City screen
 
@@ -944,7 +944,7 @@ Hurry Wonder = Uspíšit stavbu Divu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!
 You have entered the [newEra]! = Vstoupili jsme do éry [newEra]!
  # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = Civilizace [civName] vstoupila do éry [eraName]!
 [policyBranch] policy branch unlocked! = Zpřístupněna větev sociální politiky: [policyBranch]
 Overview = Přehled
 Total = Celkem
@@ -973,7 +973,7 @@ Action = Činnost
 Defeated = Poražený(á)
 Tiles = Políčka
  # Requires translation!
-Natural Wonders = 
+Natural Wonders = Přírodní Divy
  # Requires translation!
 Treasury deficit = 
 
@@ -1005,14 +1005,14 @@ Undefeated civs = Neporažené civilizace
 
 What would you like to do with the city? = Co si přejeme s městem udělat?
 Annex = Anektovat
-Annexed cities become part of your regular empire. = Anektované města se stanou regulérní součástí naší říše.
+Annexed cities become part of your regular empire. = Anektovaná města se stanou regulérní součástí naší říše.
 Their citizens generate 2x the unhappiness, unless you build a courthouse. = Jejich obyvatelé produkují 2x tolik nespokojenosti dokud napostavíte Soud.
 Puppet = Loutková vláda
 Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Města s loutkovou vládou nezvyšují náklady na výzkum a kulturu, ale jejich obyvatelé generují 1,5x tolik nespokojenosti.
 You have no control over the the production of puppeted cities. = Nemáme kontrolu nad produkcí ve městech s loutkovou vládou.
 Puppeted cities also generate 25% less Gold and Science. = Města s loutkovou vládou také generují o 25% méně Zlata a Výzkumu.
 A puppeted city can be annexed at any time. = Město s loutkovou vládou lze kdykoliv anektovat.
-Liberate = Osvabodit
+Liberate = Osvobodit
 Liberating a city returns it to its original owner, giving you a massive relationship boost with them! = Osvobozené město se vrátí zpět k původnímu majiteli, což nám přinese masivní zlepšení vzájemných vztahů.
 Raze = Srovnat se zemí
 Razing the city annexes it, and starts razing the city to the ground. = Vyhlazování města zároveň způsobí jeho anektování a započne srovnávání města ze zemí.
@@ -1110,7 +1110,7 @@ Workers =
 
 # Other civilopedia things
  # Requires translation!
-Nations = 
+Nations = Národy
 Promotions = Povýšení
  # Requires translation!
 Available for [unitTypes] = 
@@ -1444,12 +1444,12 @@ Great Barrier Reef = Velký bariérový útes
 Krakatoa = Krakatoa
 Mount Fuji = Hora Fuji
  # Requires translation!
-Old Faithful = 
+Old Faithful = Old Faithful gejzír
 Rock of Gibraltar = Gibraltarské skály
  # Requires translation!
 Cerro de Potosi = 
  # Requires translation!
-El Dorado = 
+El Dorado = El Dorado
 Fountain of Youth = Fontána mládí
 
 # Natural Wonders Uniques
@@ -1468,7 +1468,7 @@ Bananas = Banány
 Wheat = Pšenice
 Stone = Kámen
 Fish = Ryby
-Bison = Bizon
+Bison = Bizoni
 Horses = Koně
 Iron = Železná ruda
 Coal = Uhlí
@@ -1535,7 +1535,7 @@ WaterMelee = Námořní boj zblízka
 Ranged = Boj na dálku
 WaterRanged = Námořní boj na dálku
 WaterSubmarine = Námořní ponorka
-Siege = obléhání
+Siege = Obléhání
 Mounted = Jízdní
 Scout = Zvěd
 Armor = Brnění
@@ -1553,8 +1553,8 @@ Maori Warrior = Maorský válěčník
 Archer = Lučištník
 Bowman = Lepší lučištník
 Work Boats = Pracovní člun
-Cannot enter ocean tiles until Astronomy = Nelze vplout na oceán před objevem Astronomie
-May create improvements on water resources = Může vybudovat vylepšení na voních políčkách
+Cannot enter ocean tiles until Astronomy = Nelze vyplout na oceán před objevem Astronomie
+May create improvements on water resources = Může vybudovat vylepšení na vodních políčkách
 Trireme = Triréma
 Cannot enter ocean tiles = Nelze vyplout na oceán
 Chariot Archer = Lučištník ve válečném vozu
@@ -1593,7 +1593,7 @@ Landsknecht = Landsknecht
 Knight = Rytíř
 Camel Archer = Lučištník na velbloudu
  # Requires translation!
-Conquistador = 
+Conquistador = Konkistador
  # Requires translation!
 Mandekalu Cavalry = 
  # Requires translation!
@@ -1603,9 +1603,9 @@ Samurai = Samuraj
 Combat very likely to create Great Generals = Má velkou šanci získat Velkého generála v bitvě
 Caravel = Karavela
 Turtle Ship = Želví loď
-+1 Visibility Range = +1 větší viditelnost
++1 Visibility Range = +1 dohled
  # Requires translation!
-+2 Visibility Range = 
++2 Visibility Range = +2 dohled
 Cannon = Dělo
 Musketman = Střelec s mušketou
 Musketeer = Mušketýr
